"""init

Revision ID: e1a5a92141f1
Revises:
Create Date: 2026-03-03 02:43:34.883314

"""

from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from alembic_utils.pg_function import PGFunction
from sqlalchemy import text as sql_text
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = "e1a5a92141f1"
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    public_trigger_set_updated_at = PGFunction(
        schema="public",
        signature="trigger_set_updated_at()",
        definition="RETURNS TRIGGER AS $$\n        BEGIN\n            NEW.updated_at = NOW();\n            RETURN NEW;\n        END;\n        $$ LANGUAGE plpgsql",
    )
    op.create_entity(public_trigger_set_updated_at)

    op.create_table(
        "order",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("customer_name", sa.String(length=100), nullable=False),
        sa.Column("customer_phone", sa.String(length=20), nullable=False),
        sa.Column("delivery_address", sa.String(length=255), nullable=False),
        sa.Column("delivery_notes", sa.String(length=255), nullable=True),
        sa.Column("items", sa.JSON(), nullable=False),
        sa.Column("total_amount", sa.Float(), nullable=False),
        sa.Column(
            "order_status",
            postgresql.ENUM(
                "pending",
                "preparing",
                "out_for_delivery",
                "delivered",
                "cancelled",
                name="order_status_enum",
                create_type=True,
            ),
            nullable=False,
        ),
        sa.Column(
            "payment_status",
            postgresql.ENUM(
                "unpaid",
                "paid",
                "refunded",
                name="payment_status_enum",
                create_type=True,
            ),
            nullable=False,
        ),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "ticket",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("order_id", sa.UUID(), nullable=False),
        sa.Column(
            "category",
            postgresql.ENUM(
                "billing",
                "technical",
                "login",
                "general",
                "delivery",
                name="ticket_category_enum",
                create_type=True,
            ),
            nullable=True,
        ),
        sa.Column(
            "priority",
            postgresql.ENUM(
                "low",
                "medium",
                "high",
                "urgent",
                name="ticket_priority_enum",
                create_type=True,
            ),
            nullable=True,
        ),
        sa.Column(
            "status",
            postgresql.ENUM(
                "ai_handling",
                "escalated_to_human",
                "human_handling",
                "closed",
                name="ticket_status_enum",
                create_type=True,
            ),
            nullable=False,
        ),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["order_id"],
            ["order.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(op.f("ix_ticket_order_id"), "ticket", ["order_id"], unique=False)
    op.create_table(
        "message",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("thread_id", sa.UUID(), nullable=False),
        sa.Column(
            "role",
            postgresql.ENUM(
                "user", "assistant", "human", name="msg_role_enum", create_type=True
            ),
            nullable=False,
        ),
        sa.Column("content", sa.String(), nullable=False),
        sa.Column("sent_at", sa.DateTime(timezone=True), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["thread_id"],
            ["ticket.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(
        op.f("ix_message_thread_id"), "message", ["thread_id"], unique=False
    )
    op.execute(
        "\n                        CREATE TRIGGER order_set_updated_at\n                        BEFORE UPDATE ON public.order\n                        FOR EACH ROW\n                        EXECUTE FUNCTION public.trigger_set_updated_at();\n                    "
    )
    op.execute(
        "\n                        CREATE TRIGGER ticket_set_updated_at\n                        BEFORE UPDATE ON public.ticket\n                        FOR EACH ROW\n                        EXECUTE FUNCTION public.trigger_set_updated_at();\n                    "
    )
    op.execute(
        "\n                        CREATE TRIGGER message_set_updated_at\n                        BEFORE UPDATE ON public.message\n                        FOR EACH ROW\n                        EXECUTE FUNCTION public.trigger_set_updated_at();\n                    "
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.execute(
        "\n                        DROP TRIGGER IF EXISTS message_set_updated_at\n                        ON public.message;\n                        "
    )
    op.execute(
        "\n                        DROP TRIGGER IF EXISTS ticket_set_updated_at\n                        ON public.ticket;\n                        "
    )
    op.execute(
        "\n                        DROP TRIGGER IF EXISTS order_set_updated_at\n                        ON public.order;\n                        "
    )
    op.drop_index(op.f("ix_message_thread_id"), table_name="message")
    op.drop_table("message")
    op.drop_index(op.f("ix_ticket_order_id"), table_name="ticket")
    op.drop_table("ticket")
    op.drop_table("order")
    public_trigger_set_updated_at = PGFunction(
        schema="public",
        signature="trigger_set_updated_at()",
        definition="RETURNS TRIGGER AS $$\n        BEGIN\n            NEW.updated_at = NOW();\n            RETURN NEW;\n        END;\n        $$ LANGUAGE plpgsql",
    )
    op.drop_entity(public_trigger_set_updated_at)

    # ### end Alembic commands ###
